<resources>
    <string name="app_name">FlashMind</string>
    <string name="loading_message">Carregando...</string>
    <string name="ERROR_MESSAGE_NO_CONNECTION">Sem conexão com a internet.</string>
    <string name="title_activity_main">FlashMind</string>
    <string name="LABEL_DECKS">Decks</string>
    <string name="LABEL_MY_DECKS">Meus Decks</string>
    <string name="LABEL_LAST_DECKS">Decks recentes</string>

    <string name="LABEL_EMPTY_DECK_COUNT">0 Cards</string>
    <string name="BUTTON_PLAY_TEXT">Jogar</string>
    <string name="BUTTON_TRAIN_TEXT">Treinar</string>
    <string name="BUTTON_EDIT_TEXT">Editar</string>
    <string name="LABEL_CARDS_NUMBER">Numero de cartas:</string>
    <string name="LABEL_BEST_SCORE">Melhor pontuação:</string>
    <string name="LABEL_TRAIN_COUNT">Treinos realizados:</string>
    <string name="LABEL_PLAY_COUNT">Jogadas realizadas:</string>
    <string name="HINT_DECK_NAME">Nome do deck</string>
    <string name="MENU_DESC_LIST">Lista</string>
    <string name="LABEL_SUGGESTION">RECOMENDADO</string>
    <string name="BUTTON_DOWNLOAD_DECK_TEXT">BAIXAR DECK</string>
    <string name="LABEL_LAST_UPDATED_DECKS">DECKS RECENTEMENTE ATUALIZADOS</string>
    <string name="BUTTON_DOWNLOAD_TEXT">BAIXAR</string>
    <string name="LABEL_CATEGORY">Categoria</string>
    <string name="LABEL_DISCOVER">Explorar</string>
    <string name="PAGE_TITLE_DISCOVER">Explorar</string>
    <string name="PAGE_TITLE_HOME">FlashMind</string>
    <string name="PAGE_TITLE_MY_DECKS">Meus Decks</string>
    <string name="title_activity_create_deck">CreateDeckActivity</string>
    <string name="LABEL_DECK_NAME">Nome do deck</string>
    <string name="LABEL_FRONT">Frente</string>
    <string name="LABEL_BACK">Atrás</string>
    <string name="MENU_CHANGE_IMAGE">Alterar imagem</string>
    <string name="MENU_IMAGE_ASPECT">Resolução</string>
    <string name="MENU_IMAGE">Carregar imagem</string>
    <string name="DIALOG_TITLE_COLOR_PICKER">Selecione uma cor</string>
    <string name="LABEL_TYPE_SEARCH">Digite uma palavra chave</string>
    <string name="DIALOG_TITLE_IMAGE_SEARCH">Adicionar imagem</string>
    <string name="MENU_ADD_CARD">Adicionar carta</string>
    <string name="BUTTON_SAVE_DECK_TEXT">Salvar deck</string>
    <string name="DIALOG_TITLE_LANGUAGE_PICKER">Selecione um idioma</string>
    <string name="LABEL_DECK_TAGS">Tags</string>
    <string name="LABEL_DECK_LANGUAGE">Linguagem</string>
</resources>
