<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDeckName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="Flash Mind Deck"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDeckCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/LABEL_CARDS_NUMBER" />

        <TextView
            android:id="@+id/tvDeckBestScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/LABEL_BEST_SCORE" />

        <TextView
            android:id="@+id/tvDeckTrainCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LABEL_TRAIN_COUNT" />

        <TextView
            android:id="@+id/tvDeckPlayCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LABEL_PLAY_COUNT" />

    </LinearLayout>
</LinearLayout>