<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:background="@color/space_white"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <ImageView
            android:id="@+id/ivOwnerPhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:padding="16dp"
            android:src="@drawable/ic_user"
            android:tint="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDeckOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="4dp"
                android:text="@string/app_name"
                android:textColor="@color/textColorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDeckDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-seif-light"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/textColorPrimaryDark" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="26dp"
            android:src="@drawable/ic_plus" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDeckName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/textColorPrimaryDark"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.25"
        android:background="@color/textColorPrimaryDark" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/near_me"
            android:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvDeckCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="16sp"
            android:text="@string/LABEL_EMPTY_DECK_COUNT"
            android:textColor="@color/textColorPrimaryDark" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark">


        <Button
            android:id="@+id/btnDownload"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/BUTTON_DOWNLOAD_DECK_TEXT"
            android:textColor="@color/textColorDarkBackground" />

    </LinearLayout>
</LinearLayout>